--- a/notebook/load_data.ipynb
+++ b/notebook/load_data.ipynb
@@ -1243,8 +1243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-20T20:32:40.870443Z",
-     "start_time": "2025-10-20T20:31:37.347878Z"
+     "end_time": "2025-10-27T15:23:03.314556Z",
+     "start_time": "2025-10-27T15:22:55.096394Z"
     }
    },
    "cell_type": "code",
@@ -1284,8 +1284,7 @@
     "'প্রাথমিক','মনে','নতুন','পি','পেয়্র্','বক্তব্য','ধামার','সি','সাধারণ','সামনে','হাজার'\n",
     "]\n",
     "!pip install bangla-stemmer\n",
-    "\n",
-    "\n",
+    "import pandas as pd\n",
     "import re\n",
     "from bangla_stemmer.stemmer import stemmer\n",
     "import sys\n",
@@ -1305,25 +1304,90 @@
     "    text = re.sub(r'\\s+', ' ', text).strip()\n",
     "    return text\n",
     "\n",
-    "\n",
-    "def remove_punctuations(text):\n",
-    "    punct_pattern = r\"[!\\\"#$%&'()*+,\\-./:;<=>?@\\[\\\\\\]^_`{|}~।॥‘’“”—৳]\"\n",
-    "    text = re.sub(punct_pattern, '', text)\n",
-    "    return text\n",
-    "\n",
-    "\n",
     "def tokenize_and_stem(text):\n",
     "    words = text.split()\n",
     "    stmr = stemmer.BanglaStemmer()\n",
     "    tokens = [suppress_stdout(stmr.stem, w) for w in words if w not in bangla_stopwords]\n",
     "    return ' '.join(tokens)\n",
+    "#for fine-tuning data processing\n",
+    "def simple_bangla_stem(word):\n",
+    "    suffixes = [\"গুলো\", \"দের\", \"মতো\", \"গুলোই\", \"টিতে\", \"টার\", \"রা\", \"টি\", \"টা\", \"তে\", \"র\", \"রা\", \"এর\", \"ই\", \"ও\"]\n",
+    "    for suf in sorted(suffixes, key=len, reverse=True):\n",
+    "        if word.endswith(suf) and len(word) > len(suf) + 1:\n",
+    "            return word[:-len(suf)]\n",
+    "    return word\n",
     "\n",
+    "bangla_normalization_dict = {\n",
+    "    \"মুরগি\": \"মুরগি\",\n",
+    "    \"মুরগী\": \"মুরগি\",\n",
+    "    \"মুরগীটা\": \"মুরগি\",\n",
+    "    \"মুরগিটা\": \"মুরগি\",\n",
+    "    \"মুরগিগুলো\": \"মুরগি\",\n",
+    "\n",
+    "    \"শিয়াল\": \"শিয়াল\",\n",
+    "    \"শেয়াল\": \"শিয়াল\",\n",
+    "    \"শিয়াল\": \"শিয়াল\",\n",
+    "\n",
+    "    \"মানুষ\": \"মানুষ\",\n",
+    "    \"মাঞ্জুষ\": \"মানুষ\",\n",
+    "    \"মানুষটা\": \"মানুষ\",\n",
+    "\n",
+    "\"ইন্টারভিউ\": \"ইন্টারভিউ\",\n",
+    "    \"ক্যামেরাম্যান\": \"ক্যামেরাম্যান\",\n",
+    "    \"মডেল\": \"মডেল\",\n",
+    "    \"টিম\": \"টিম\",\n",
+    "    \"বস\": \"বস\",\n",
+    "    \"ভিডি\": \"ভিডিও\",\n",
+    "    \"ফরান্স\": \"ফ্রান্স\",\n",
+    "\n",
+    "    \"খাচ্ছে\": \"খাওয়া\",\n",
+    "    \"খাচ্ছেন\": \"খাওয়া\",\n",
+    "    \"খায়\": \"খাওয়া\",\n",
+    "    \"খেতে\": \"খাওয়া\",\n",
+    "    \"খেয়েছে\": \"খাওয়া\",\n",
+    "\n",
+    "    \"দেয়\": \"দেওয়া\",\n",
+    "    \"দিচ্ছে\": \"দেওয়া\",\n",
+    "    \"দিয়েছে\": \"দেওয়া\",\n",
+    "\n",
+    "    \"কিন্তু\": \"কিন্তু\",\n",
+    "    \"কিংবা\": \"কিন্তু\",\n",
+    "    \"এবং\": \"এবং\",\n",
+    "    \"আরও\": \"আরও\",\n",
+    "\n",
+    "    \"একটি\": \"এক\",\n",
+    "    \"এক\": \"এক\",\n",
+    "    \"দুইটি\": \"দুই\",\n",
+    "    \"দুই\": \"দুই\",\n",
+    "}\n",
     "\n",
     "def preprocess_bangla_text(text):\n",
-    "    text = clean_bangla_text(text)\n",
-    "    text = remove_punctuations(text)\n",
-    "    text = tokenize_and_stem(text)\n",
-    "    return text\n",
+    "    text = str(text)\n",
+    "\n",
+    "\n",
+    "    text = re.sub(r\"<.*?>|http\\S+|www\\S+|\\S*@\\S*|\\#\\S*\", \" \", text)  # removing HTML, URLs, emails, hashtags\n",
+    "    text = re.sub(r\"[a-zA-Z০-৯0-9]+\", \" \", text)\n",
+    "    punct_pattern = f\"[{string.punctuation}।॥‘’“”—৳]\"\n",
+    "    text = re.sub(punct_pattern, \" \", text)\n",
+    "    text = re.sub(\"[য়য়]\", \"য়\", text)\n",
+    "    text = re.sub(\"[ঋৃ]\", \"ঋ\", text)\n",
+    "    text = re.sub(\"[ঁ্]\", \"\", text)\n",
+    "    text = re.sub(r\"\\s+\", \" \", text).strip()  # remove extra spaces\n",
+    "\n",
+    "    # Removing repeated consecutive words\n",
+    "    words = text.split()\n",
+    "    words = [words[i] for i in range(len(words)) if i == 0 or words[i] != words[i-1]]\n",
+    "\n",
+    "    # Normalizing words our using dictionary\n",
+    "    words = [bangla_normalization_dict.get(w, w) for w in words]\n",
+    "\n",
+    "    # 4️⃣ Removing stopwords using our list\n",
+    "    words = [w for w in words if w not in bangla_stopwords]\n",
+    "\n",
+    "\n",
+    "    words = [simple_bangla_stem(w) for w in words]\n",
+    "\n",
+    "    return \" \".join(words)\n",
     "\n",
     "\n",
     "processed_data = pd.read_csv(\"processed_data.csv\")\n",
@@ -1333,7 +1397,7 @@
     "for original, processed in zip(processed_data['text'][:2], processed_data['processed_text'][:2]):\n",
     "    print(\"Original:\", original)\n",
     "    print(\"Processed:\", processed)\n",
-    "    print(\"-\" * 10)"
+    "    print(\"-\" * 50)"
    ],
    "id": "cf7cd93145170593",
    "outputs": [
@@ -1344,15 +1408,15 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: bangla-stemmer in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (1.0)\n",
       "Original: মুরগির হামলায় শেয়াল নিহত বাংলায় একটা প্রবাদ আছে, শেয়ালের কাছে মুরগী বর্গা দেওয়া। প্রবাদটা এজন্য বলা হয় যে, শিয়ালের কাজই হলো মুরগী খেয়ে ফেলা। শেয়ালের কাছ থেকে মুরগী কখনো নিজেকে রক্ষা করতে পারেনা।তবে ফ্রান্সের এক বিশ্ববিদ্যালয়ের শিক্ষক-শিক্ষার্থীরা জানাচ্ছে, এবার এক আশ্চর্য্যজনক ঘটনা ঘটছে। মুরগীর হামলায় শিয়াল মারা গেছে।ঘটনাটি গত সপ্তাহের, ফ্রান্সের উত্তর-পূর্বাঞ্চলের বুতানিয়া এলাকার একটি কৃষিবিষয়ক বিদ্যালয়ে। ওই বিদ্যালয়ে একটি মুরগির খামার রয়েছে। মুরগির ঘরের এক কোনায় সকালে মৃত একটি শিয়াল পড়ে থাকতে দেখে শিক্ষার্থীরা।৬ হাজার মুরগি রয়েছে খামারটিতে। শিয়ালটির মৃতদেহ যেখানে পাওয়া গেছে, সেখানে তিন হাজার মুরগি ছিল। মুরগিগুলো সারা দিন বাইরে চরে বেড়ায়। সন্ধ্যা হলে নিজ থেকে ঘরে উঠে আসে। সূর্য ডুবে গেলেই দরজা বন্ধ হয়ে যায় স্বয়ংক্রিয়ভাবে।স্থানীয় বন্য প্রাণী বিশেষজ্ঞরা জানিয়েছেন, এই ঘটনায় তাঁরা অবাক। শিয়ালটি বাচ্চা ও অনভিজ্ঞ ছিল। এতগুলো মুরগির সামনে পড়ে সে সম্ভবত ভড়কে গিয়েছিল।Source- BBC Bangla\n",
-      "Processed: মুরগির হামলায় শেয়াল নিহত বাংলায় এক প্রবাদ শেয়াল মুরগী বর্গা প্রবাদ এজন্য শিয়াল কাজ মুরগী খায় ফেলা শেয়াল মুরগী কখনো নিজে রক্ষা পারেনাতবে ফ্রান্স এক বিশ্ববিদ্যালয় শিক্ষকশিক্ষার্থী জান এক আশ্চর্য্যজনক ঘটনা ঘট মুরগীর হামলায় শিয়াল মার গেছেঘটনাটি গত সপ্তাহ ফ্রান্স উত্তরপূর্বাঞ্চল বুতানিয়া এল কৃষিবিষয়ক বিদ্যালয় বিদ্যালয় মুরগির খামা মুরগির ঘর এক কোনায় সকালে মৃত শিয়াল পড়ে থাক শিক্ষার্থীরা৬ মুরগি খামারটি শিয়াল মৃতদেহ তিন মুরগি মুরগি সার দিন বাইরে চরে বেড়ায় সন্ধ্যা নিজ ঘরে উঠে আসে সূর্য ডুবে গাল দরজা বন্ধ স্বয়ংক্রিয়ভাবেস্থানীয় বন্য প্রাণী বিশেষজ্ঞ জানিয়েছেন ঘটনায় অবাক শিয়াল বাচ্চা অনভিজ্ঞ এত মুরগির পড়ে সম্ভবত ভড় গিয়েছিল\n",
-      "----------\n",
+      "Processed: মুরগি হামলায় শিয়াল নিহত বাংলায় এক পরবাদ শেয়ালে মুরগি বরগা পরবাদ এজনয় য়ে শিয়ালে কাজ মুরগি খেয়ে ফেলা শেয়ালে মুরগি কখনো নিজেকে রকষা পারেনা ফরানসে এক বিশববিদয়ালয়ে শিকষক শিকষারথী জানাচছে এক আশচরয়য়জনক ঘটনা ঘটছে মুরগী হামলায় শিয়াল মা ঘটনা গত সপতাহে ফরানসে উতত পূরবাঞচলে বুতানিয়া এলাকা এক কঋষিবিষয়ক বিদয়ালয়ে বিদয়ালয়ে এক মুরগি খামা মুরগি ঘরে এক কোনায় সকালে মঋত এক শিয়াল পড়ে থাক শিকষারথী মুরগি খামার শিয়ালটি মঋতদেহ য়েখানে তিন মুরগি মুরগি সা দিন বাইরে চরে বেড়ায় সনধয়া নিজ ঘরে উঠে আসে সূরয় ডুবে গেলে দরজা বনধ য়ায় সবয়ংকরিয়ভাবে সথানীয় বনয় পরাণী বিশেষজঞ জানিয়েছেন ঘটনায় অবাক শিয়াল বাচচা অনভিজঞ এত মুরগি পড়ে সমভবত ভড়কে গিয়েছিল\n",
+      "--------------------------------------------------\n",
       "Original: বিটিভিতে যেবার আমি ইন্টারভিউ দিতে গেলাম BTV থেকে লোকজন আসছে, ইন্টারভিউ নিবে।চারজনের টিম, এদের মধ্যে স্যুট, টাই পড়া বস একজন, দুইজন ক্যামেরাম্যান, আরেকজন উঠতি বয়সের, কড়া মেকাপ দেওয়া নারী মডেল।বস যিনি, আমার সাথে হাত মিলিয়ে পরিচয় হবার পর, পাশে দাঁড়ানো এক সিকিউরিটি গার্ডকে বললেন, ‘... তুমি এক কাজ করো, নুরুল ভাই কফির কাপ হাতে নিয়ে তোমার সামনে দিয়ে হেঁটে যাবে, তুমি আকাশ বাতাস কাঁপাইয়া ঠাস করে একটা সেলুট দিবা, এইটা ভিডিও করে রাখি, বাঙ্গালি পাবলিকের ভুং ভাং পছন্দ’।‘... এইটা না করলে হয় না, কেমন যেনো বানানো লাগে’– ভদ্রলোকের আইডিয়া শুনে আমি রীতিমতো বিব্রত।‘... আরে স্যার কী বলেন? আপনার ফ্যাক্টরিতে আদব কায়দা আছে, এইটা তোফায়েল সাহেব দেখতে চাইবে’।‘... তোফায়েল সাহেব কে?’‘কমার্স মিনিস্টার তোফায়েল সাহেব। নেন– কফির কাপে চুমুক দিতে দিতে হাঁটা শুরু করেন’।হাঁটাহাঁটি ভিডিও হবার পর, আমার অফিস রুমে বসে ইন্টারভিউ শুরু হলো।‘স্যার, ক্যামেরা অন হবার পর আপনি বলা শুরু করবেন’।‘কী বলবো?’‘বাংলাদেশের আর্থ সামাজিক প্রেক্ষাপটে হোম টেক্সটাইলসের অবদান আর তাতে ইউনিলায়েন্স টেক্সটাইলসের ভুমিকা’।আমি কিছুক্ষণ তবদা মেরে থাকলাম। ‘যেই লাইন বললেন, এইটার বাংলা কী?’‘এইটাই বাংলা, একটু গুছাইয়া এইটা ঐটা বইল্যা দিয়েন, আর শেষে বর্তমান সরকারের ইতিবাচক ভুমিকা ক্লিয়ার করে দিবেন, এতটুকুই; পারবেন না? স্যার, আপনার পকেটে চিরুনি আছে?’‘না তো, কেন?’‘আমার চুলটা একটু আচড়াইয়া নিতাম, চুল এলেমেলো থাকলে আপনার ভাবী আবার রাগ করে, আমার ক্যামেরা ফেস ভালো, খালি এলেমেলো চুলটাই সমস্যা করে। এইটা নিয়া ডাইরেক্টর স্যার একদিন ডাক দিয়া বলছেন, আজিজ, তোমার এইটা চুল না বা* এইটাই বুঝলাম না, উনি লোক ভালো, কিন্তু মুখ খারাপ’!\n",
-      "Processed: বিটিভি যেব ইন্টারভিউ গেল লোকজন আস ইন্টারভিউ নিবেচারজন টিম স্যুট টাই পড়া বস একজন দুইজন ক্যামেরাম্যান আরেকজন উঠতি বয়স কড়া মেকাপ নারী মডেলবস সাথে হাত মিলা পরিচয় হব পাশে দাঁড়ানো এক সিকিউরি গার্ড এক কাজ করো নুরুল ভাই কফির কাপ হাত হেঁটে আকাশ বাতাস কাঁপাইয়া ঠাস এক সেলুট দিবা এই ভিডি রাখি বাঙ্গা পাবলিক ভুং ভাং পছন্দ এই কেমন যেনো বানানো লাগে ভদ্রলোক আইডিয়া শুনে রীতিম বিব্রত আরে স্য ফ্যাক্টরি আদব কায়দা এই তোফায়েল সাহেব চাইবে তোফায়েল সাহেব কেকমার্স মিনিস্ তোফায়েল সাহেব নেন কফির কাপে চুমুক হাঁ শুরু করেনহাঁটাহাঁটি ভিডি হব অফ রুমে ইন্টারভিউ শুরু হলোস্য ক্যামে অন হব শুরু করবেনকী বলবোবাংলাদেশের আর্থ সামাজিক প্রেক্ষাপটে হোম টেক্সটাইলস অবদান ইউনিলায়েন্স টেক্সটাইলস ভুমিকাআমি কিছুক্ষণ তবদা মার থাক যেই লাইন এই বাংলা কীএইটাই বাংলা একটু গুছাইয়া এই ঐটা বইল্যা দিয় শাষ বর্তমান সরকার ইতিবাচক ভুমিকা ক্লিয় দিব এতটুকু পার স্য পকেট চিরুনি আছেনা কেনআম চুল একটু আচড়াইয়া নিতাম চুল এলেমেলো থাকলে ভাবী রাগ ক্যামে ফেস ভালো খালি এলেমেলো চুল সমস্যা এই নিয়া ডাইরেক্টর স্য একদিন ডাক দিয়া বলছ আজিজ এই চুল এইটাই বুঝ লোক ভালো মুখ খারাপ\n",
-      "----------\n"
+      "Processed: বিটিভি য়েবা ইনটারভিউ গেলাম লোকজন আসছে ইনটারভিউ নিবে চারজনে টিম মধয়ে সয়ুট টা পড়া বস একজন দুইজন কয়ামেরাময়ান আরেকজন উঠতি বয়সে কড়া মেকাপ নারী মডেল বস য়িনি সাথে হাত মিলিয়ে পরিচয় হবা পাশে দাড়ানো এক সিকিউরি গারডকে এক কাজ করো নুরুল ভা কফি কাপ হা হেটে য়াবে আকাশ বাতাস কাপাইয়া ঠাস এক সেলুট দিবা এই ভিডি রাখি বাঙগালি পাবলিকে ভুং ভাং পছনদ এই কেমন য়েনো বানানো লাগে – ভদরলোকে আইডিয়া শুনে রীতি বিবরত আরে সয়া ফয়াকটরি আদব কায়দা এই তোফায়েল সাহেব চাইবে তোফায়েল সাহেব কমারস মিনিস তোফায়েল সাহেব নেন– কফি কাপে চুমুক হা শুরু হাটাহা ভিডি হবা অফিস রুমে ইনটারভিউ শুরু সয়া কয়ামে অন হবা শুরু বলবো বাংলাদেশে আরথ সামাজিক পরেকষাপটে হোম টেকসটাইলসে অবদান ইউনিলায়েনস টেকসটাইলসে ভুমিকা কিছুকষণ তবদা মেরে থাকলাম য়ে লাইন এই বাংলা এইটা বাংলা একটু গুছাইয়া এই ঐটা বইলয়া দিয়েন শেষে বরতমান সরকারে ইতিবাচক ভুমিকা কলিয়া দিবেন এতটুকু পারবেন সয়া পকেটে চিরুনি চুল একটু আচড়াইয়া নিতাম চুল এলেমেলো থাকলে ভাবী রাগ কয়ামে ফেস ভালো খালি এলেমেলো চুলটা সমসয়া এই নিয়া ডাইরেকট সয়া একদিন ডাক দিয়া বলছেন আজিজ এই চুল এইটা বুঝলাম লোক ভালো কিনতু মুখ খারাপ\n",
+      "--------------------------------------------------\n"
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 11
   }
  ],
  "metadata": {
