--- a/notebook/load_data.ipynb
+++ b/notebook/load_data.ipynb
@@ -1381,7 +1381,7 @@
     "    # Normalizing words our using dictionary\n",
     "    words = [bangla_normalization_dict.get(w, w) for w in words]\n",
     "\n",
-    "    # 4️⃣ Removing stopwords using our list\n",
+    "    #  Removing stopwords using our list\n",
     "    words = [w for w in words if w not in bangla_stopwords]\n",
     "\n",
     "\n",
@@ -1417,6 +1417,300 @@
     }
    ],
    "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T17:00:08.610215Z",
+     "start_time": "2025-10-27T17:00:08.606754Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Count the number of samples per class\n",
+    "print(processed_data['label'].value_counts())\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "1e2bcc2976e3c6ab",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label\n",
+      "1    7202\n",
+      "0    1299\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T17:10:32.921197Z",
+     "start_time": "2025-10-27T17:10:30.805995Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip install imbalanced-learn\n",
+   "id": "fdf955ac812da77f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting imbalanced-learn\n",
+      "  Downloading imbalanced_learn-0.14.0-py3-none-any.whl.metadata (8.8 kB)\n",
+      "Requirement already satisfied: numpy<3,>=1.25.2 in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (from imbalanced-learn) (2.3.3)\n",
+      "Requirement already satisfied: scipy<2,>=1.11.4 in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (from imbalanced-learn) (1.16.2)\n",
+      "Requirement already satisfied: scikit-learn<2,>=1.4.2 in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (from imbalanced-learn) (1.7.2)\n",
+      "Requirement already satisfied: joblib<2,>=1.2.0 in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (from imbalanced-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in c:\\users\\user\\appdata\\roaming\\python\\python314\\site-packages (from imbalanced-learn) (3.6.0)\n",
+      "Downloading imbalanced_learn-0.14.0-py3-none-any.whl (239 kB)\n",
+      "Installing collected packages: imbalanced-learn\n",
+      "Successfully installed imbalanced-learn-0.14.0\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T17:30:33.921441Z",
+     "start_time": "2025-10-27T17:30:23.132548Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.combine import SMOTETomek\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "X_text = processed_data['text']\n",
+    "y = processed_data['label']\n",
+    "\n",
+    "# Splitting into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_text, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "# TF-IDF vectorization\n",
+    "vectorizer = TfidfVectorizer(max_features=5000, ngram_range=(1,2))\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = vectorizer.transform(X_test)\n",
+    "\n",
+    "print(\"TF-IDF feature shape:\", X_train_tfidf.shape)\n",
+    "print(\"First 20 features:\", vectorizer.get_feature_names_out()[:20])\n",
+    "\n",
+    "#using SMOTETomek for handling our imbalanced data\n",
+    "smk = SMOTETomek(random_state=42)\n",
+    "X_resampled, y_resampled = smk.fit_resample(X_train_tfidf, y_train)\n",
+    "\n",
+    "print(\"Original train label distribution:\", Counter(y_train))\n",
+    "print(\"Resampled train label distribution:\", Counter(y_resampled))\n",
+    "\n",
+    "# X_resampled, y_resampled -> training features and labels\n",
+    "# X_test_tfidf, y_test -> test features and labels\n",
+    "\n"
+   ],
+   "id": "3e922757a7abb9e4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF-IDF feature shape: (6800, 5000)\n",
+      "First 20 features: ['adsbygoogle' 'beats' 'bengal' 'bengal beats' 'com' 'eআরক' 'of'\n",
+      " 'sharetweet' 'the' 'অক' 'অক বর' 'অক ষর' 'অগ' 'অগ রগত' 'অঙ' 'অচ' 'অজ' 'অঞ'\n",
+      " 'অঞ চল' 'অট']\n",
+      "Original train label distribution: Counter({1: 5761, 0: 1039})\n",
+      "Resampled train label distribution: Counter({1: 5760, 0: 5760})\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T17:59:33.697850Z",
+     "start_time": "2025-10-27T17:59:33.686896Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "\n",
+    "os.makedirs(\"vectorizer\", exist_ok=True)\n",
+    "\n",
+    "with open(\"vectorizer/tfidf_vectorizer.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(vectorizer, f)\n"
+   ],
+   "id": "405dd468c65e68d6",
+   "outputs": [],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T18:07:10.463670Z",
+     "start_time": "2025-10-27T18:07:10.457156Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "print(os.listdir(\"vectorizer\"))\n",
+    "\n",
+    "with open(\"vectorizer/tfidf_vectorizer.pkl\", \"rb\") as f:\n",
+    "    loaded_vectorizer = pickle.load(f)\n",
+    "\n",
+    "print(type(loaded_vectorizer))\n"
+   ],
+   "id": "dfd902cf3f28d50f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tfidf_vectorizer.pkl']\n",
+      "<class 'sklearn.feature_extraction.text.TfidfVectorizer'>\n"
+     ]
+    }
+   ],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T18:24:22.239231Z",
+     "start_time": "2025-10-27T18:24:21.234604Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Load the vectorizer\n",
+    "import pickle\n",
+    "\n",
+    "with open(\"vectorizer/tfidf_vectorizer.pkl\", \"rb\") as f:\n",
+    "    vectorizer = pickle.load(f)\n",
+    "\n",
+    "X = vectorizer.transform(processed_data['processed_text'])\n",
+    "y = processed_data['label']\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n"
+   ],
+   "id": "9b7dee0b8294b20d",
+   "outputs": [],
+   "execution_count": 40
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T18:25:49.966249Z",
+     "start_time": "2025-10-27T18:25:49.902642Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "logreg = LogisticRegression(max_iter=1000, class_weight='balanced')\n",
+    "\n",
+    "logreg.fit(X_resampled, y_resampled)\n",
+    "\n",
+    "y_pred = logreg.predict(X_test_tfidf)\n",
+    "\n",
+    "print(\"Logistic Regression Results\")\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ],
+   "id": "f65154424c2943f5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Results\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.75      0.85      0.80       260\n",
+      "           1       0.97      0.95      0.96      1441\n",
+      "\n",
+      "    accuracy                           0.93      1701\n",
+      "   macro avg       0.86      0.90      0.88      1701\n",
+      "weighted avg       0.94      0.93      0.94      1701\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T18:23:38.626476Z",
+     "start_time": "2025-10-27T18:23:38.610811Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "# Create a folder for saving models if it doesn't exist\n",
+    "os.makedirs(\"models\", exist_ok=True)\n",
+    "\n",
+    "# Save the TF-IDF vectorizer\n",
+    "with open(\"models/tfidf_vectorizer.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(vectorizer, f)\n",
+    "\n",
+    "# Save the trained Logistic Regression model\n",
+    "with open(\"models/logistic_regression_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(logis_reg_biagram, f)\n",
+    "\n",
+    "print(\"Vectorizer and model saved successfully!\")\n",
+    "\n",
+    "# ✅ Optional: check if they load back correctly\n",
+    "with open(\"models/tfidf_vectorizer.pkl\", \"rb\") as f:\n",
+    "    loaded_vectorizer = pickle.load(f)\n",
+    "\n",
+    "with open(\"models/logistic_regression_model.pkl\", \"rb\") as f:\n",
+    "    loaded_model = pickle.load(f)\n",
+    "\n",
+    "print(type(loaded_vectorizer))  # <class 'sklearn.feature_extraction.text.TfidfVectorizer'>\n",
+    "print(type(loaded_model))       # <class 'sklearn.linear_model._logistic.LogisticRegression'>\n"
+   ],
+   "id": "84151064db1c1020",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizer and model saved successfully!\n",
+      "<class 'sklearn.feature_extraction.text.TfidfVectorizer'>\n",
+      "<class 'sklearn.linear_model._logistic.LogisticRegression'>\n"
+     ]
+    }
+   ],
+   "execution_count": 39
   }
  ],
  "metadata": {
