Add Random Forest implementation

--- a/notebook/03_random_forest.ipynb
+++ b/notebook/03_random_forest.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:19:20.328085Z",
-     "start_time": "2025-11-06T16:19:17.610441Z"
+     "end_time": "2025-11-06T16:46:38.438355Z",
+     "start_time": "2025-11-06T16:46:38.431970Z"
     }
    },
    "cell_type": "code",
@@ -15,10 +15,11 @@
     "import joblib\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "print(\"✓ Libraries imported successfully!\")"
    ],
-   "id": "cb341a5d80ceef28",
+   "id": "d13402f4c09a07ff",
    "outputs": [
     {
      "name": "stdout",
@@ -28,82 +29,213 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:34:20.007008Z",
-     "start_time": "2025-11-06T16:34:19.974763Z"
+     "end_time": "2025-11-06T16:46:43.554646Z",
+     "start_time": "2025-11-06T16:46:43.010293Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "with open('tfidf_vectorizer.pkl', 'rb') as f:\n",
-    "    data = pickle.load(f)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = data['X_train'], data['X_test'], data['y_train'], data['y_test']\n",
-    "print(\"✓ Data loaded successfully!\")"
+    "# Loading cleaned dataset\n",
+    "df = pd.read_csv('../data/processed_data.csv')\n",
+    "print(\"Dataset loaded\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"Columns: {df.columns.tolist()}\")\n",
+    "print(f\"Label distribution:\\n{df['label'].value_counts()}\")"
    ],
-   "id": "46667c6fc6b9a729",
+   "id": "ce425f1ff158a85e",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'TfidfVectorizer' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 4\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mtfidf_vectorizer.pkl\u001B[39m\u001B[33m'\u001B[39m, \u001B[33m'\u001B[39m\u001B[33mrb\u001B[39m\u001B[33m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[32m      2\u001B[39m     data = pickle.load(f)\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m X_train, X_test, y_train, y_test = \u001B[43mdata\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mX_train\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m, data[\u001B[33m'\u001B[39m\u001B[33mX_test\u001B[39m\u001B[33m'\u001B[39m], data[\u001B[33m'\u001B[39m\u001B[33my_train\u001B[39m\u001B[33m'\u001B[39m], data[\u001B[33m'\u001B[39m\u001B[33my_test\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m      5\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33m✓ Data loaded successfully!\u001B[39m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[31mTypeError\u001B[39m: 'TfidfVectorizer' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset loaded\n",
+      "Shape: (8501, 8)\n",
+      "Columns: ['articleID', 'domain', 'date', 'category', 'label', 'source', 'F-type', 'text']\n",
+      "Label distribution:\n",
+      "label\n",
+      "1    7202\n",
+      "0    1299\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T16:46:50.061912Z",
+     "start_time": "2025-11-06T16:46:48.039341Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "rf_model = RandomForestClassifier(\n",
-    "    n_estimators=100,\n",
-    "    random_state=42,\n",
-    "    max_depth=10,\n",
-    "    n_jobs=-1\n",
+    "\n",
+    "with open('tfidf_vectorizer.pkl', 'rb') as f:\n",
+    "    vectorizer = pickle.load(f)\n",
+    "\n",
+    "print(\"✓ Vectorizer loaded successfully!\")\n",
+    "\n",
+    "\n",
+    "X = vectorizer.transform(df['text'])\n",
+    "y = df['label']\n",
+    "\n",
+    "print(f\"✓ Text data vectorized! Shape: {X.shape}\")"
+   ],
+   "id": "e656c987c82fa605",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Vectorizer loaded successfully!\n",
+      "✓ Text data vectorized! Shape: (8501, 5000)\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T16:46:55.641808Z",
+     "start_time": "2025-11-06T16:46:55.610494Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")\n",
     "\n",
-    "print(\"Training Random Forest...\")\n",
-    "rf_model.fit(X_train, y_train)\n",
-    "print(\"✓ Training completed!\")"
+    "print(\"✓ Data split completed!\")\n",
+    "print(f\"Training set: {X_train.shape}\")\n",
+    "print(f\"Test set: {X_test.shape}\")\n",
+    "print(f\"Training labels distribution:\\n{y_train.value_counts()}\")"
    ],
-   "id": "b4d8d1904bf8b4eb"
+   "id": "8691ec2740410944",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Data split completed!\n",
+      "Training set: (6800, 5000)\n",
+      "Test set: (1701, 5000)\n",
+      "Training labels distribution:\n",
+      "label\n",
+      "1    5761\n",
+      "0    1039\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T16:47:01.962848Z",
+     "start_time": "2025-11-06T16:47:01.593900Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "# Initialize Random Forest\n",
+    "rf_model = RandomForestClassifier(\n",
+    "    n_estimators=100,    # Number of trees\n",
+    "    random_state=42,     # For reproducible results\n",
+    "    max_depth=10,        # Prevent overfitting\n",
+    "    n_jobs=-1           # Use all CPU cores\n",
+    ")\n",
+    "\n",
+    "print(\"Training Random Forest model...\")\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "print(\"✓ Random Forest training completed!\")"
+   ],
+   "id": "fb6b4c6b7f27d232",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Random Forest model...\n",
+      "✓ Random Forest training completed!\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T16:47:08.789825Z",
+     "start_time": "2025-11-06T16:47:08.738269Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Make predictions\n",
     "y_pred = rf_model.predict(X_test)\n",
     "rf_accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"Random Forest Accuracy: {rf_accuracy:.4f} ({rf_accuracy*100:.2f}%)\")\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(f\"🎯 RANDOM FOREST RESULTS:\")\n",
+    "print(f\"Accuracy: {rf_accuracy:.4f} ({rf_accuracy*100:.2f}%)\")\n",
+    "\n",
+    "print(\"\\n📊 Detailed Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Show confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm)"
    ],
-   "id": "672305bd430ccc61"
+   "id": "8488ff13cdb089a7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎯 RANDOM FOREST RESULTS:\n",
+      "Accuracy: 0.8912 (89.12%)\n",
+      "\n",
+      "📊 Detailed Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.29      0.45       260\n",
+      "           1       0.89      1.00      0.94      1441\n",
+      "\n",
+      "    accuracy                           0.89      1701\n",
+      "   macro avg       0.94      0.64      0.69      1701\n",
+      "weighted avg       0.90      0.89      0.86      1701\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[  75  185]\n",
+      " [   0 1441]]\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T16:47:23.205761Z",
+     "start_time": "2025-11-06T16:47:23.169498Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "# Save Random Forest model\n",
     "joblib.dump(rf_model, 'random_forest_model.pkl')\n",
-    "print(\"✓ Random Forest model saved!\")\n",
+    "print(\"✓ Random Forest model saved as 'random_forest_model.pkl'\")\n",
     "\n",
+    "# Save results\n",
     "results = {\n",
     "    'y_true': y_test,\n",
     "    'y_pred': y_pred,\n",
@@ -114,9 +246,21 @@
     "    pickle.dump(results, f)\n",
     "\n",
     "print(\"✓ Results saved!\")\n",
-    "print(\"✅ Done!\")"
+    "print(\"✅ Random Forest training COMPLETE!\")"
    ],
-   "id": "1be27a5256b94a81"
+   "id": "93cc90179f259e57",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Random Forest model saved as 'random_forest_model.pkl'\n",
+      "✓ Results saved!\n",
+      "✅ Random Forest training COMPLETE!\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   }
  ],
  "metadata": {
