--- a/notebook/load_data.ipynb
+++ b/notebook/load_data.ipynb
@@ -3166,29 +3166,29 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "\n",
-    "# Load dataset\n",
+    
     "data = pd.read_csv(\"bangla_data_processed.csv\")\n",
     "texts = data['text']       # news text column\n",
     "labels = data['label']     # Fake=0, Real=1\n",
     "\n",
-    "# Load TF-IDF vectorizer\n",
+    
     "with open(\"tfidf_vectorizer.pkl\", \"rb\") as f:\n",
     "    vectorizer = pickle.load(f)\n",
     "\n",
     "X = vectorizer.transform(texts)\n",
     "y = labels.values\n",
     "\n",
-    "# Train/test split\n",
+    
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Random Forest with balanced class weights\n",
+    "# Train Random Forest 
     "rf = RandomForestClassifier(n_estimators=200, class_weight='balanced', random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Predict\n",
+    
     "y_pred = rf.predict(X_test)\n",
     "\n",
-    "# Evaluate\n",
+    
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
@@ -3235,25 +3235,24 @@
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "import xgboost as xgb\n",
     "\n",
-    "# 1️⃣ Load processed dataset\n",
     "data = pd.read_csv(\"bangla_data_processed.csv\")  # your processed CSV\n",
     "texts = data['text']    # news text column\n",
     "labels = data['label']  # Fake=0, Real=1\n",
     "\n",
-    "# 2️⃣ Load TF-IDF vectorizer\n",
+    
     "with open(\"tfidf_vectorizer.pkl\", \"rb\") as f:\n",
     "    vectorizer = pickle.load(f)\n",
     "\n",
-    "# 3️⃣ Transform texts to TF-IDF features\n",
+
     "X = vectorizer.transform(texts)\n",
     "y = labels.values\n",
     "\n",
-    "# 4️⃣ Split data\n",
+    
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# 5️⃣ Train XGBoost model\n",
+    
     "model = xgb.XGBClassifier(\n",
     "    n_estimators=300,\n",
     "    max_depth=10,\n",
@@ -3262,7 +3261,7 @@
     ")\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# 6️⃣ Predict and evaluate\n",
+    
     "y_pred = model.predict(X_test)\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
@@ -3419,13 +3418,13 @@
    },
    "cell_type": "code",
    "source": [
-    "# model = trained XGBoost\n",
+    "# XGBoost\n",
     "# vectorizer = your TF-IDF vectorizer\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Get feature importances\n",
+   
     "importance = model.feature_importances_\n",
     "\n",
     "# Get feature names from TF-IDF\n",
@@ -3533,7 +3532,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Get probabilities from XGBoost\n",
+    "probabilities from XGBoost\n",
     "probs = model.predict_proba(X_test)\n",
     "prob_fake = probs[:,0]\n",
     "prob_real = probs[:,1]\n",
