--- a/notebook/load_data.ipynb
+++ b/notebook/load_data.ipynb
@@ -3690,6 +3690,125 @@
    "id": "cdfc19d5ae8344d3",
    "outputs": [],
    "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:09:58.552671Z",
+     "start_time": "2025-11-17T14:09:56.294044Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "!pip install tensorflow\n",
+    "!pip install tensorflow-cpu\n",
+    "\n"
+   ],
+   "id": "ae2e0ae80999fd25",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement tensorflow (from versions: none)\n",
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "ERROR: No matching distribution found for tensorflow\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement tensorflow-cpu (from versions: none)\n",
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "ERROR: No matching distribution found for tensorflow-cpu\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T15:35:50.860309Z",
+     "start_time": "2025-11-17T15:35:45.433586Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import pandas as pd\n",
+    "processed_data_han = pd.read_csv(\"processed_data_han.csv\")\n",
+    "# Flatten all words from tokenized sentences\n",
+    "all_words = [word for docmnt in processed_data_han['processed_text_han']\n",
+    "                  for sent in docmnt for word in sent]\n",
+    "\n",
+    "# Build vocabulary: word → index (0 reserved for padding)\n",
+    "w_count = Counter(all_words)\n",
+    "dict_mapTo_unique = {word: indx+1 for indx, word in enumerate(w_count.keys())}\n",
+    "dict_size = len(dict_mapTo_unique) + 1  # +1 for padding\n",
+    "\n",
+    "# Encode and pad a document\n",
+    "def encode_doc(docmnt, max_sentences=20, max_words=50):\n",
+    "    equal_sent_list = []\n",
+    "    for sent in docmnt[:max_sentences]:\n",
+    "        sent_indx = [dict_mapTo_unique.get(w, 0) for w in sent[:max_words]]  # convert word to index\n",
+    "\n",
+    "        paddingNumber = max_words - len(sent_indx)\n",
+    "        padding = [0] * paddingNumber\n",
+    "        sent_indx = sent_indx + padding\n",
+    "        equal_sent_list.append(sent_indx)  #This ensures every sentence has exactly max_words words. Its  word level padding inside  sentence\n",
+    "    # pad sentences, this ensures every document has max_sentences\n",
+    "    while len(equal_sent_list) < max_sentences:\n",
+    "        equal_sent_list.append([0]*max_words)\n",
+    "    return equal_sent_list\n",
+    "\n",
+    "# Encode entire dataset\n",
+    "X = np.array([encode_doc(doc) for doc in processed_data_han['processed_text_han']])\n",
+    "X = torch.tensor(X, dtype=torch.long)\n",
+    "\n",
+    "encoded_document = []\n",
+    "for docs in processed_data_han['processed_text_han']:\n",
+    "    encoded_doc = encode_doc(docs)  # Encode one document\n",
+    "    encoded_document.append(encoded_doc)\n",
+    "\n",
+    "# Converting the list of encoded documents to a NumPy array\n",
+    "X = np.array(encoded_document)\n",
+    "X = torch.tensor(X, dtype=torch.long) # converting to PyTorch tensor\n",
+    "print(\"Shape:\", X.shape)  # (num_docs, max_sentences, max_words)\n",
+    "\n"
+   ],
+   "id": "cfc4905f01b25c45",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: torch.Size([8501, 20, 50])\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   }
  ],
  "metadata": {
